[package]
name = "dag"
version = "0.1.0"
edition = "2021"

[dependencies]
simcore = { path = "../simcore" }
compute = { path = "../compute" }
network = { path = "../network" }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
dot-parser = "0.1.0"
serde_yaml = "0.8"
enum-iterator = "0.7.0"
