[package]
name = "dslab-dag"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../dslab-core" }
dslab-compute = { path = "../dslab-compute" }
dslab-network = { path = "../dslab-network" }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_yaml = "0.8"
enum-iterator = "0.7.0"
rand = { version = "0.8.4" }
rand_pcg = "0.3.1"
itertools = "0.10.5"
threadpool = "1.8.1"
indexmap = "1.9.2"
