[package]
name = "dslab-dag"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../dslab-core" }
dslab-compute = { path = "../dslab-compute" }
dslab-network = { path = "../dslab-network" }
indexmap = "1.9.2"
itertools = "0.10.5"
log = "0.4"
rand = "0.8.4"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_json = "1.0"
serde_yaml = "0.8"
strum = "0.24"
strum_macros = "0.24"
threadpool = "1.8.1"
