[package]
name = "dslab-faas"
version = "0.0.1"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../dslab-core" }

arima = "0.2"
csv = "1.1"
indexmap = "1.8.2"
itertools = "0.10.3"
num = "0.2.0"
order-stat = "0.1.3"
rand = { version = "0.8.5", features = ["alloc"] }
rand_pcg = "0.3.1"
rustc-hash = "1.1.0"
rv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
threadpool = "1.8.1"
