[package]
name = "dslab-iaas"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../dslab-core" }
rand = "0.8.3"
sugars = "3.0.0"
log = "0.4"
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dyn-clone = "1.0"
csv = "1.1"
serde_json = "1.0.48"
