[package]
name = "dslab-mp-python"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-mp = { path = "../dslab-mp" }
colored = "2.0.0"
rstest = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
sugars = "3.0.0"

[dependencies.pyo3]
version = "0.19.2"
features = ["auto-initialize"]
