[package]
name = "dslab-network"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../dslab-core" }
dslab-models = { path = "../dslab-models" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
indexmap = "1.9.1"

[dev-dependencies]
rstest = "0.18.1"
