[package]
name = "async-event-details"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../../crates/dslab-core", features = ["async_mode"] }
dslab-compute = { path = "../../crates/dslab-compute" }
clap = { version = "3.1.12", features = ["cargo", "derive"] }
env_logger = "0.9.0"
futures = "0.3"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sugars = "3.0.0"
