[package]
name = "async-master-workers"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../../crates/dslab-core", features = ["async_details_core"] }
dslab-compute = { path = "../../crates/dslab-compute" }
dslab-storage = { path = "../../crates/dslab-storage" }
dslab-network = { path = "../../crates/dslab-network" }
clap = { version = "3.1.12", features = ["cargo", "derive"] }
log = "0.4.14"
env_logger = "0.9.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
sugars = "3.0.0"
priority-queue = "1.2.1"
futures = "0.3"
