[package]
name = "async-network-ping-pong"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../../crates/dslab-core", features = ["async_core"] } 
dslab-network = {path = "../../crates/dslab-network" }
futures = "0.3"

clap = { version = "3.1.12", features = ["cargo", "derive"] }
log = "0.4.14"
env_logger = "0.9.0"
sugars = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
