[package]
name = "cloud_plugin_traces_example"
version = "0.1.0"
edition = "2021"

[dependencies]
simcore = { path = "../../crates/simcore" }
cloud-plugin = { path = "../../crates/cloud-plugin" }
rand = "0.8.3"
sugars = "3.0.0"
log = "0.4"
env_logger = "0.8.4"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
