[package]
name = "dag-benchmark"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../../crates/dslab-core" }
dslab-compute = { path = "../../crates/dslab-compute" }
dslab-network = { path = "../../crates/dslab-network" }
dslab-dag = { path = "../../crates/dslab-dag" }
clap = { version = "4.1.9", features = ["derive"] }
env_logger = "0.10.0"
sugars = "3.0.0"
