[package]
name = "dag-portfolio"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../../crates/dslab-core" }
dslab-compute = { path = "../../crates/dslab-compute" }
dslab-network = { path = "../../crates/dslab-network" }
dslab-dag = { path = "../../crates/dslab-dag" }
sugars = "3.0.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
env_logger = "0.9.0"
log = "0.4"
clap = { version = "4.1.9", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking"] }
threadpool = "1.8.1"
