[package]
name = "dag_example"
version = "0.1.0"
edition = "2021"

[dependencies]
simcore = { path = "../../crates/simcore" }
compute = { path = "../../crates/compute" }
network = { path = "../../crates/network" }
dag = { path = "../../crates/dag" }
sugars = "3.0.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
env_logger = "0.9.0"
log = "0.4"
clap = { version = "3.0.14", features = ["cargo"] }
