[package]
name = "fair-share-bench"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../../crates/dslab-core" }
dslab-compute = { path = "../../crates/dslab-compute" }
log = "0.4.14"
env_logger = "0.9.0"
clap = { version = "3.1.12", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
sugars = "3.0.0"
