[package]
name = "iaas-experiment"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../../crates/dslab-core" }
dslab-iaas = { path = "../../crates/dslab-iaas" }
rand = "0.8.3"
sugars = "3.0.0"
log = "0.4"
env_logger = "0.8.4"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
