[package]
name = "master-workers"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../../crates/core" }
compute = { path = "../../crates/compute" }
network = { path = "../../crates/network" }
clap = { version = "3.0.14", features = ["cargo"] }
log = "0.4.14"
env_logger = "0.9.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
sugars = "3.0.0"
