[package]
name = "master-workers"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
simcore = "0.1"
dslab-compute = { path = "../../crates/dslab-compute" }
dslab-network = { path = "../../crates/dslab-network" }
dslab-storage = { path = "../../crates/dslab-storage" }
clap = { version = "3.1.12", features = ["cargo", "derive"] }
env_logger = "0.9.0"
log = "0.4.14"
priority-queue = "1.2.1"
rand = "0.8.4"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
sugars = "3.0.0"
