[package]
name = "mp-guarantees"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { path = "../../crates/dslab-core" }
dslab-mp = { path = "../../crates/dslab-mp" }
dslab-mp-python = { path = "../../crates/dslab-mp-python" }
assertables = "3.2.2"
clap = { version = "3.1.17", features = ["cargo", "derive"] }
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.5"
rand_pcg = "0.3.1"
sugars = "3.0.0"
